# visual_studio_cpp_egui_demo

./: .gitattributes  .gitignore  README.md  carlson error message on crash.txt  cpp_cli_rust_caller.sln
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
bevy_egui_paneled_playground/: Cargo.toml
bevy_egui_paneled_playground/src/: c_wrapper.h  lib.rs  main.rs
egui_demo_lib/: Cargo.toml
egui_demo_lib/src/: egui_demo_app_c_wrapper.h  lib.rs
egui_glium_pure/: Cargo.toml
egui_glium_pure/src/: c_wrapper.h  lib.rs  main.rs
glslang-master-windows-x64-Release/lib/: HLSL.lib  OGLCompiler.lib  OSDependent.lib  SPIRV.lib  SPVRemapper.lib  glslang.lib
