[package]
name = "bevy_egui_paneled_playground"
version = "0.0.1"
authors = ["jwilliams <bayswaterpc@gmail.com>"]
description = "A set of examples for Egui Paneled app with integration into Bevy"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { version = "0.5", features = ["dynamic"] } // requires config_fast_builds to config.toml
bevy = { version = "0.5" }
bevy_egui="0.4.2"
rand = "*"


[lib]
name = "egui_paneled_playground"
#path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "egui_paneled_playground_app"
path = "src/main.rs"


# [package]
# name = "egui_demo_app"
# version = "0.12.0"
# authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
# license = "MIT OR Apache-2.0"
# edition = "2018"
# publish = false

# [lib]
# name = "egui_demo_app_c_wrapper"
# crate-type = ["staticlib", "cdylib"]

# [dependencies]
# eframe = { version = "0.12.0", features = ["time"] }
# egui_demo_lib = { version = "0.12.0" }

# [features]
# default = ["persistence"]
# http = ["eframe/http", "egui_demo_lib/http"]
# persistence = ["eframe/persistence", "egui_demo_lib/persistence"]
# screen_reader = ["eframe/screen_reader"] # experimental
# syntax_highlighting = ["egui_demo_lib/syntax_highlighting"]
